--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,32 +1,47 @@
 {
     "extends": "stylelint-config-standard-scss",
-    "plugins": ["stylelint-scss"],
+    "plugins": [
+        "stylelint-scss"
+    ],
     "rules": {
-        "at-rule-no-unknown": [true, { "ignoreAtRules": ["include", "each", "mixin", "if", "else", "content", "extend", "function", "return", "at-root", "for", "use", "warn"] }],
+        "at-rule-empty-line-before": [
+            "always",
+            {
+                "ignoreAtRules": ["else", "function", "include", "mixin"],
+                "ignore": ["blockless-after-same-name-blockless", "inside-block"]
+            }
+        ],
+        "at-rule-no-unknown": [true, { "ignoreAtRules": ["include", "each", "mixin", "if", "else", "content", "extend", "function", "return", "at-root", "for", "use", "warn"] } ],
+        "color-function-notation": null,
         "font-family-name-quotes": "always-unless-keyword",
+        "import-notation": null,
+        "no-descending-specificity": null,
+        "no-invalid-double-slash-comments": true,
         "scss/at-extend-no-missing-placeholder": null,
-        "scss/at-mixin-argumentless-call-parentheses": null,
-        "scss/load-no-partial-leading-underscore": true,
-        "scss/dollar-variable-colon-space-after": null,
-        "scss/dollar-variable-empty-line-before": null,
+        "scss/at-mixin-pattern": null,
+        "scss/at-import-partial-extension-disallowed-list": ["scss"],
+        "scss/comment-no-empty": null,
         "scss/dollar-variable-no-missing-interpolation": true,
+        "scss/dollar-variable-empty-line-before": null,
+        "scss/dollar-variable-colon-space-after": null,
+        "scss/dollar-variable-pattern": [ "^-?[-a-z0-9]*[a-z0-9]$", { "message": "Expected variable to be kebab-case" } ],
+        "scss/load-no-partial-leading-underscore": true,
         "scss/media-feature-value-dollar-variable": "always",
         "scss/no-global-function-names": null,
         "scss/double-slash-comment-empty-line-before": null,
-        "scss/selector-no-redundant-nesting-selector": null,
-        "at-rule-empty-line-before": ["always", { "ignoreAtRules": ["else"], "ignore": ["after-comment", "blockless-after-same-name-blockless", "inside-block"] }],
-        "shorthand-property-no-redundant-values": null,
-        "no-invalid-double-slash-comments": true,
+        "scss/selector-no-redundant-nesting-selector": true,
         "selector-class-pattern": null,
-        "selector-id-pattern": null,
-        "selector-no-vendor-prefix": null,
-        "selector-type-no-unknown": [true, { "ignoreTypes": ["isapplepay"] }],
-        "media-query-no-invalid": null,
-        "declaration-block-no-redundant-longhand-properties": null,
+        "custom-property-pattern": null,
+        "selector-not-notation": null,
+        "value-keyword-case": [ "lower", { "camelCaseSvgKeywords": true } ],
+        "declaration-block-no-redundant-longhand-properties": [
+            true,
+            {
+                "ignoreShorthands": ["inset"]
+            }
+        ],
+        "shorthand-property-no-redundant-values": null,
         "alpha-value-notation": null,
-        "color-function-notation": null,
-        "property-no-vendor-prefix": null,
-        "no-empty-source": null,
-        "scss/comment-no-empty": null
+        "declaration-block-no-shorthand-property-overrides": null
     }
 }
