--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^4.6.2",
     "cleave.js": "^1.6.0",
     "dompurify": "^3.2.4",
+    "drift-zoom": "^1.5.1",
     "flag-icons": "7.3.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
