--- a/cartridges/plugin_giftcard/.project
+++ b/cartridges/plugin_giftcard/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>bm_plugin_giftcertificates</name>
+	<name>plugin_giftcard</name>
 	<comment></comment>
 	<projects>
 	</projects>
