--- a/cartridges/bm_app_storefront_core/.project
+++ b/cartridges/bm_app_storefront_core/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>bm_plugin_giftcard</name>
+	<name>bm_app_storefront_core</name>
 	<comment></comment>
 	<projects>
 	</projects>
