YD-389:FIX: validation error messages improved

--- a/cartridges/app_yd_core/cartridge/templates/resources/contactUs.properties
+++ b/cartridges/app_yd_core/cartridge/templates/resources/contactUs.properties
@@ -11,3 +11,6 @@ email.contact.topic.GI=General Information
 email.contact.topic.OS=Order Status
 email.contact.topic.MA=My Account
 email.contact.topic.O=Other
+
+contact.us.first.name.error=Please enter a valid first name
+contact.us.last.name.error=Please enter a valid last name
