YD-386:ADD: gift certificate information on order review and order confirmation pages

--- a/cartridges/plugin_giftcard/cartridge/templates/resources/giftcard.properties
+++ b/cartridges/plugin_giftcard/cartridge/templates/resources/giftcard.properties
@@ -3,6 +3,8 @@ billing.no.method=Your order has been paid using gift certificates. If you do no
 billing.redeemed={0} has been redeemed from gift certificate {1}
 billing.balance=Your current gift certificate balance is {0}
 
+msg.payment.method=GIFT CERTIFICATE
+
 error.missing=Please enter a gift card code.
 error.invalid=Invalid gift card code.
 error.no.funds=Insufficient Gift Card balance.
@@ -10,3 +12,5 @@ error.duplicate={0} is already redeemed for this order
 
 button.submit=Submit
 button.checkbalance=Check Balance
+
+label.gift.certificates=Gift Certificate(s)
