YD-387:FIX: query error; nulls in templates

--- a/cartridges/plugin_ordermanagement/cartridge/templates/resources/account.properties
+++ b/cartridges/plugin_ordermanagement/cartridge/templates/resources/account.properties
@@ -1,5 +1,4 @@
-label.orderhistory.total.item=Item
-label.orderhistory.total.items=Items
+label.orderhistory.total.item={0,choice,1#1 Item|1<{0,number} Items}
 label.orderhistory.ordered.date.label=Ordered: {0}
 
 label.orderhistory.status.ordered=Status: Ordered
