--- a/cartridges/app_yd_core/cartridge/templates/resources/confirmation.properties
+++ b/cartridges/app_yd_core/cartridge/templates/resources/confirmation.properties
@@ -9,7 +9,7 @@ label.email.billing.address=Billing Address
 
 msg.email.desc.title=THANK YOU FOR YOUR PURCHASE!
 msg.email.name.info=Hey {0},
-msg.email.order.info=Your order is officially in motion—soon you'll be wrapped in comfort that's made to move, stretch, and flow right along with you. Each item is made thoughtfully, with love for you and our planet in every stitch.
+msg.email.order.info=Your order {0} is officially in motion—soon you'll be wrapped in comfort that's made to move, stretch, and flow right along with you. Each item is made thoughtfully, with love for you and our planet in every stitch.
 msg.email.favorites.info=We'll let you know as soon as your new favorites leave our hands and begin their journey to yours.
 msg.email.thank.you.info=Thank you for choosing comfort and bringing us along on your next adventure.
 msg.email.gratitude.info=With gratitude,
