YD-175:FIX: refactor.

--- a/cartridges/app_yd_core/cartridge/templates/resources/error.properties
+++ b/cartridges/app_yd_core/cartridge/templates/resources/error.properties
@@ -1,2 +1,2 @@
-heading.error.general=404 page not found
+heading.error.not.found=404 page not found
 message.page.not.found=You may want to return to the <a href="{0}">home</a> or <a href="{1}">try a search</a>.
